/*
 * $Id: ChangeLog,v 1.6122 2008/06/04 00:30:43 kaddath Exp $
 */

/* Use this format for the entry headers:
   YYYY-MM-DD HH:MM UTC[-|+]hhmm Your Full Name <your_email@address>
   For example:
   2002-12-01 23:12 UTC+0100 Foo Bar <foo.bar@foobar.org>
*/

2008-06-04 09:32 UTC-0500 Vicente Guerra <vicente@guerra.com.mx>
  * ./make_bc.bat
  * ./make_pc.bat
    * Added 'IF "%envvar%"=="" SET ...' to environment variables.

2008-06-03 17:25 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * xharbour/contrib/rdd_ads/ads.ch
    ! Aligned #defines; moved all #commands to the bottom.

2008-06-03 16:10 UTC-0800 Luis Krause Mantilla <lkrausem /*at*/ shaw /*dot*/ ca>
  * makefile.bc
  * makefile.dc
  * makefile.gc
  * makefile.vc
  * makefile.wc
    ! Dependency to ace32.lib when creating DLL with RDDADS conditioned
    to setting of HB_ADS_IMPLIB (see explanation below).
    I was only able to test the BC build; users of other compilers
    please test the other ones and fix if appropiate.

  - xharbour/contrib/rdd_ads/ace.h
  * xharbour/contrib/rdd_ads/rddads.h
  * xharbour/contrib/rdd_ads/ace32.c
  * xharbour/contrib/rdd_ads/ads1.c
  * xharbour/contrib/rdd_ads/adsfunc.c
  * xharbour/contrib/rdd_ads/adsmgmnt.c
  * xharbour/contrib/rdd_ads/ads.ch
  * xharbour/contrib/rdd_ads/adsexternal.ch
  * xharbour/contrib/rdd_ads/make_b32.bat
  * xharbour/contrib/rdd_ads/makefile.bc
  * xharbour/contrib/rdd_ads/makefile.vc
  * xharbour/contrib/rdd_ads/readme.txt

    ! Code synchronized with Harbour.  Thanks to Viktor Szakats!
    ! Linux and Watcom hacks moved from ace.h to rddads.h.
    - ace.h removed from cvs; use HB_DIR_ADS setting to specify location
      of acesdk where ace.h and ace32.dll reside.  This file had way too
      many hacks that make it very difficult to sync with new versions of
      ADS.  We should avoid having 3rd party source in xharbour as much
      as possible and only use the original source files from the
      developers SDK.