@@ -1,5 +1,5 @@
 /*
- * $Id: hsx.c,v 1.13 2006/12/11 13:26:26 druzus Exp $
+ * $Id: hsx.c,v 1.14 2007/03/02 02:36:23 druzus Exp $
  */
 
 /*
@@ -621,8 +621,8 @@ static int hb_hsxHdrFlush( int iHandle )
          uiBits++;
 
       HB_PUT_LE_UINT32( pHeader->recCount,    pHSX->ulRecCount );
-      HB_PUT_LE_UINT32( pHeader->recSize,     pHSX->uiRecordSize );
-      HB_PUT_LE_UINT32( pHeader->recSizeBits, uiBits );
+      HB_PUT_LE_UINT32( pHeader->recSize,     ( UINT32 ) pHSX->uiRecordSize );
+      HB_PUT_LE_UINT32( pHeader->recSizeBits, ( UINT32 ) uiBits );
       HB_PUT_LE_UINT16( pHeader->ignoreCase,  pHSX->fIgnoreCase ? 1 : 0 );
       HB_PUT_LE_UINT16( pHeader->filterType,  pHSX->iFilterType );
       HB_PUT_LE_UINT32( pHeader->hashLetters, pHSX->fUseHash ? 1 : 0 );
